--- a/templates/profile_detail.html
+++ b/templates/profile_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load timeslots %}
 {% block title %}Profile{% endblock %}
 
 {% block content %}
@@ -36,8 +37,19 @@
           {% csrf_token %}
           <input type="hidden" name="action" value="edit">
           <input type="hidden" name="reservation_id" value="{{ res.id }}">
-          <input type="time" name="start_time" step="1800" min="08:00" required>
-          <input type="time" name="end_time" step="1800" min ="08:30"  required>
+           <!-- Start time select -->
+          <select name="start_time" class="form-select d-inline w-auto" required>
+            {% for t in time_options %}
+              <option value="{{ t }}" {% if t == res.start_time|time:"H:i" %}selected{% endif %}>{{ t }}</option>
+            {% endfor %}
+          </select>
+
+          <!-- End time select -->
+          <select name="end_time" class="form-select d-inline w-auto" required>
+            {% for t in time_options %}
+              <option value="{{ t }}" {% if t == res.end_time|time:"H:i" %}selected{% endif %}>{{ t }}</option>
+            {% endfor %}
+          </select>
           <button type="submit" class="btn btn-primary btn-sm">Edit</button>
         </form>
       </td>
